695 - SF